# flutter_libmwc

./: .gitignore  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: init_transaction_view.dart  main.dart  mnemonic_view.dart  password_view.dart  recover_view.dart  transaction_view.dart  wallet_name.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
ios/: flutter_libmwc.podspec
ios/Classes/: FlutterLibmwcPlugin.swift
lib/: flutter_libmwc.dart  flutter_libmwc_method_channel.dart  flutter_libmwc_platform_interface.dart  lib.dart  mwc.dart
linux/: CMakeLists.txt  flutter_libmwc_plugin.cc
macos/: LICENSE  README.md  flutter_libmwc.podspec
macos/Classes/: FlutterLibmwcPlugin.swift
rust/: Cargo.toml
rust/src/: lib.rs
scripts/android/: config.sh  download.sh  install_ndk.sh  publish.sh
scripts/ios/: build_all.sh  download.sh  publish.sh
scripts/linux/: build_all.sh  download.sh  publish.sh
scripts/macos/: build_all.sh
scripts/windows/: README.md  build_all.ps1  build_all.sh
test/: flutter_libmwc_method_channel_test.dart  flutter_libmwc_test.dart
windows/: CMakeLists.txt  flutter_libmwc_plugin.cpp  flutter_libmwc_plugin.h  flutter_libmwc_plugin_c_api.cpp
(+13 files in other folders)
