[package]
name = "mwc-wallet"
version = "0.1.0"
edition = '2021'

[dependencies]
clap = { version = "2.31", features = ["yaml"] }
rpassword = "2.0.0"
ctrlc = { version = "3.1", features = ["termination"] }
jni = { version = "0.10.2", default-features = false, optional = true }
failure = "0.1.8"
failure_derive = "0.1.8"
prettytable-rs = "0.7"
log = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
simplelog = "^0.7.4"
openssl = { version = "0.10", features = ["vendored"] }
zeroize = { version = "1.1.0", features = ["derive"] }
rand = "0.6"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rustc-serialize = "0.3.24"
android_logger = "0.11.0"
chrono = "0.4.24"
ed25519-dalek = "1.0.0-pre.4"

mwc_keychain = "5.3.5"
mwc_util = "5.3.5"
mwc_core = "5.3.5"

mwc_wallet_api = "5.3.4"
mwc_wallet_impls = "5.3.4"
mwc_wallet_libwallet = "5.3.4"
mwc_wallet_config= "5.3.4"
mwc_wallet_util = "5.3.4"
mwc_wallet_controller = "5.3.4"

url = "2.1.0"
futures = "0.3.15"
tokio-tungstenite = "0.21.0"
tungstenite = { version = "0.21", default-features = false }
tokio = { version = "0.2.0", features = ["full"]}
websocket = "0.21.1"
ws = "0.9.2"
ffi_helpers = "0.3.0"
anyhow = "1.0.69"


[lib]
name = "mwc_wallet"
crate-type = ["cdylib"]

[patch.crates-io]
liblmdb-sys = { git = "https://github.com/i1skn/lmdb-rs" }

